--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,11 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Run tests
-        run: cargo test
-
-      - name: Check format
-        run: cargo fmt -- --check
+      - name: Format code
+        run: cargo fmt --all -- --check
 
       - name: Run clippy
         run: cargo clippy -- -D warnings
+
+      - name: Run tests
+        run: cargo test
