--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,25 +2,24 @@ name: CI
 
 on:
   push:
+    branches: [main]
   pull_request:
+    branches: [main]
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-    name: Run Tests
+  build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write # コミットするための権限
+      pull-requests: write # PRを更新するための権限
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v4
         with:
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
-
-      - name: Cache dependencies
+          fetch-depth: 0 # すべての履歴を取得
+      - name: キャッシュの設定
         uses: actions/cache@v3
         with:
           path: |
@@ -28,12 +27,36 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
 
-      - name: Format code
+      - name: フォーマットチェック
         run: cargo fmt --all -- --check
 
-      - name: Run clippy
+      - name: Lintチェック
         run: cargo clippy -- -D warnings
 
-      - name: Run tests
+      - name: テスト実行
         run: cargo test
+
+      - name: ビルド
+        run: cargo build --release
+
+      # テストデータの生成と検証
+      - name: テストデータ生成
+        run: cargo run --features=generate_testdata --bin generate_testdata
+
+      - name: ゴールデンファイル生成
+        run: cargo test -- --ignored generate_golden
+
+      # 生成されたゴールデンファイルに変更がある場合にコミット
+      - name: 変更をコミット
+        if: github.event_name == 'pull_request'
+        run: |
+          if [[ -n $(git status --porcelain tests/testdata) ]]; then
+            git config --global user.name "GitHub Actions"
+            git config --global user.email "actions@github.com"
+            git add tests/testdata
+            git commit -m "🤖 テストデータとゴールデンファイルを更新"
+            git push origin HEAD:${{ github.head_ref }}
+          fi
