--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,100 +6,90 @@ on:
       - "v*"
 
 jobs:
-  test:
-    name: Run Tests
+  create-release:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: リリース作成
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+
+  build-release:
+    needs: create-release
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            asset_name: codicat-linux-amd64
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            asset_name: codicat-linux-arm64
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            asset_name: codicat-darwin-amd64
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            asset_name: codicat-darwin-arm64
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            asset_name: codicat-windows-amd64.exe
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Rust
+      # Rustツールチェインセットアップ
+      - name: Rustツールチェインインストール
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          target: ${{ matrix.target }}
           override: true
 
-      - name: Run tests
-        run: cargo test
-
-  release:
-    name: Build & Upload Release
-    runs-on: ubuntu-latest
-    needs: test
-
-    permissions:
-      contents: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          target: x86_64-unknown-linux-gnu
-
-      - name: Add targets
+      # クロスコンパイル用のツール
+      - name: クロスコンパイル用ツールのインストール
+        if: contains(matrix.target, 'aarch64') && contains(matrix.os, 'ubuntu')
         run: |
-          rustup target add x86_64-unknown-linux-gnu
-          rustup target add aarch64-unknown-linux-gnu
-          rustup target add x86_64-apple-darwin
-          rustup target add aarch64-apple-darwin
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
 
-      - name: Set VERSION from tag
-        run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      - name: Build Linux x86_64
-        run: cargo build --release --target x86_64-unknown-linux-gnu
-
-      - name: Build Linux aarch64
-        run: cargo build --release --target aarch64-unknown-linux-gnu
-
-      - name: Install cross-compilation tools for macOS
+      # ビルド
+      - name: ビルド
         uses: actions-rs/cargo@v1
         with:
-          command: install
-          args: cross
+          command: build
+          args: --release --target ${{ matrix.target }}
+          use-cross: ${{ contains(matrix.target, 'aarch64') && contains(matrix.os, 'ubuntu') }}
 
-      - name: Build macOS x86_64
-        run: cross build --release --target x86_64-apple-darwin
-
-      - name: Build macOS aarch64
-        run: cross build --release --target aarch64-apple-darwin
-
-      - name: Create release archives
+      # 必要に応じたバイナリのコピー
+      - name: バイナリのリネーム (Unix)
+        if: runner.os != 'Windows'
         run: |
-          mkdir -p dist/archives
+          cp target/${{ matrix.target }}/release/codicat ${{ matrix.asset_name }}
+          chmod +x ${{ matrix.asset_name }}
 
-          # Linux x86_64
-          mkdir -p dist/tmp/linux-amd64
-          cp target/x86_64-unknown-linux-gnu/release/codicat dist/tmp/linux-amd64/
-          cp README.md dist/tmp/linux-amd64/
-          tar -czf dist/archives/codicat-linux-amd64.tar.gz -C dist/tmp/linux-amd64 codicat README.md
+      - name: バイナリのリネーム (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          copy target\${{ matrix.target }}\release\codicat.exe ${{ matrix.asset_name }}
 
-          # Linux aarch64
-          mkdir -p dist/tmp/linux-arm64
-          cp target/aarch64-unknown-linux-gnu/release/codicat dist/tmp/linux-arm64/
-          cp README.md dist/tmp/linux-arm64/
-          tar -czf dist/archives/codicat-linux-arm64.tar.gz -C dist/tmp/linux-arm64 codicat README.md
-
-          # macOS x86_64
-          mkdir -p dist/tmp/darwin-amd64
-          cp target/x86_64-apple-darwin/release/codicat dist/tmp/darwin-amd64/
-          cp README.md dist/tmp/darwin-amd64/
-          tar -czf dist/archives/codicat-darwin-amd64.tar.gz -C dist/tmp/darwin-amd64 codicat README.md
-
-          # macOS aarch64
-          mkdir -p dist/tmp/darwin-arm64
-          cp target/aarch64-apple-darwin/release/codicat dist/tmp/darwin-arm64/
-          cp README.md dist/tmp/darwin-arm64/
-          tar -czf dist/archives/codicat-darwin-arm64.tar.gz -C dist/tmp/darwin-arm64 codicat README.md
-
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v2
+      # リリースのアップロード
+      - name: リリースアップロード
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: "${{ env.VERSION }}"
-          files: dist/archives/*.tar.gz
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ./${{ matrix.asset_name }}
+          asset_name: ${{ matrix.asset_name }}
+          asset_content_type: application/octet-stream
