--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # すべての履歴を取得
-      - name: キャッシュの設定
+      - name: setup-cache
         uses: actions/cache@v3
         with:
           path: |
@@ -30,33 +30,33 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-
 
-      - name: フォーマットチェック
+      - name: Format check
         run: cargo fmt --all -- --check
 
-      - name: Lintチェック
+      - name: Lint check
         run: cargo clippy -- -D warnings
 
-      - name: テスト実行
+      - name: Test execution
         run: cargo test
 
-      - name: ビルド
+      - name: Build
         run: cargo build --release
 
       # テストデータの生成と検証
-      - name: テストデータ生成
+      - name: Test data generation
         run: cargo run --features=generate_testdata --bin generate_testdata
 
-      - name: ゴールデンファイル生成
+      - name: Golden file generation
         run: cargo test -- --ignored generate_golden
 
       # 生成されたゴールデンファイルに変更がある場合にコミット
-      - name: 変更をコミット
+      - name: Commit changes
         if: github.event_name == 'pull_request'
         run: |
           if [[ -n $(git status --porcelain tests/testdata) ]]; then
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             git add tests/testdata
-            git commit -m "🤖 テストデータとゴールデンファイルを更新"
+            git commit -m "🤖 Update test data and golden files"
             git push origin HEAD:${{ github.head_ref }}
           fi
