--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,35 @@ jobs:
         run: |
           copy target\${{ matrix.target }}\release\codicat.exe ${{ matrix.asset_name }}
 
+      # Create tar.gz archive for Homebrew (Unix only)
+      - name: Create tar.gz archive for Homebrew
+        if: runner.os != 'Windows'
+        id: create_archive
+        run: |
+          VERSION="${{ github.event.release.tag_name }}"
+          VERSION="${VERSION#v}" # Remove 'v' prefix if present
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          OS="${{ matrix.os == 'macos-latest' && 'darwin' || 'linux' }}"
+          ARCH="${{ contains(matrix.target, 'aarch64') && 'arm64' || 'amd64' }}"
+          echo "OS=${OS}" >> $GITHUB_ENV
+          echo "ARCH=${ARCH}" >> $GITHUB_ENV
+
+          mkdir -p codicat-${VERSION}-${OS}-${ARCH}
+          cp ${{ matrix.asset_name }} codicat-${VERSION}-${OS}-${ARCH}/codicat
+          tar -czf codicat-${VERSION}-${OS}-${ARCH}.tar.gz -C codicat-${VERSION}-${OS}-${ARCH} codicat
+
+      # Upload tar.gz archive for Homebrew (Unix only)
+      - name: Upload tar.gz archive for Homebrew
+        if: runner.os != 'Windows'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./codicat-${{ env.VERSION }}-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          asset_name: codicat-${{ env.VERSION }}-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          asset_content_type: application/gzip
+
       # Upload release asset
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
@@ -75,3 +104,33 @@ jobs:
           asset_path: ./${{ matrix.asset_name }}
           asset_name: ${{ matrix.asset_name }}
           asset_content_type: application/octet-stream
+
+  homebrew-releaser:
+    needs: build-release
+    runs-on: ubuntu-latest
+    name: Release to Homebrew
+    steps:
+      - name: Release project to Homebrew tap
+        uses: Justintime50/homebrew-releaser@v2
+        with:
+          # Homebrewタップの設定
+          homebrew_owner: inakam
+          homebrew_tap: homebrew-codicat
+
+          # フォーミュラの保存先フォルダ
+          formula_folder: Formula
+
+          # GitHubトークン
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
+          # インストールコマンド（バイナリの配置方法を指定）
+          install: 'bin.install "codicat"'
+
+          # ターゲットOS/アーキテクチャの指定（Windows以外）
+          target_darwin_amd64: true
+          target_darwin_arm64: true
+          target_linux_amd64: true
+          target_linux_arm64: true
+
+          # デバッグモード
+          debug: true
