--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.35", features = ["derive"] }
 anyhow = "1.0.97"
 arboard = "3.4.1"
 regex = "1.11.1"
+tiktoken-rs = "0.6.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
